// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.ensureNoExpected() throws error when expected is not undefined 1`] = `
"<dim>expect(</><red>received</><dim>)[.not]This(</><dim>)</>

<bold>Matcher error</>: <green>expected</> value must be omitted or undefined

Expected has type:  object
Expected has value: <green>{\\"a\\": 1}</>"
`;

exports[`.ensureNoExpected() throws error when expected is not undefined with matcherName 1`] = `
"<dim>expect(</><red>received</><dim>)[.not].toBeDefined(</><dim>)</>

<bold>Matcher error</>: <green>expected</> value must be omitted or undefined

Expected has type:  object
Expected has value: <green>{\\"a\\": 1}</>"
`;

exports[`.ensureNumbers() throws error when expected is not a number 1`] = `
"<dim>expect(</><red>received</><dim>)[.not]This matcher(</><green>expected</><dim>)</>

<bold>Matcher error</>: <green>expected</> value must be a number

Expected has type:  string
Expected has value: <green>\\"not_a_number\\"</>"
`;

exports[`.ensureNumbers() throws error when received is not a number 1`] = `
"<dim>expect(</><red>received</><dim>)[.not]This matcher(</><green>expected</><dim>)</>

<bold>Matcher error</>: <red>received</> value must be a number

Received has type:  string
Received has value: <red>\\"not_a_number\\"</>"
`;

exports[`.stringify() reduces maxDepth if stringifying very large objects 1`] = `"{\\"a\\": 1, \\"b\\": [Object]}"`;

exports[`.stringify() reduces maxDepth if stringifying very large objects 2`] = `"{\\"a\\": 1, \\"b\\": {\\"0\\": \\"test\\", \\"1\\": \\"test\\", \\"2\\": \\"test\\", \\"3\\": \\"test\\", \\"4\\": \\"test\\", \\"5\\": \\"test\\", \\"6\\": \\"test\\", \\"7\\": \\"test\\", \\"8\\": \\"test\\", \\"9\\": \\"test\\"}}"`;

exports[`.stringify() toJSON errors when comparing two objects 1`] = `
"<dim>expect(</><red>received</><dim>).toEqual(</><green>expected</><dim>)</>

Expected value to equal:
  <green>{\\"b\\": 1, \\"toJSON\\": [Function toJSON]}</>
Received:
  <red>{\\"a\\": 1, \\"toJSON\\": [Function toJSON]}</>

Difference:

<green>- Expected</>
<red>+ Received</>

<dim>  Object {</>
<green>-   \\"b\\": 1,</>
<red>+   \\"a\\": 1,</>
<dim>    \\"toJSON\\": [Function toJSON],</>
<dim>  }</>"
`;
